my second commit

--- a/requerimineto_4/4_colores.html
+++ b/requerimineto_4/4_colores.html
@@ -11,7 +11,6 @@
   <div id="color2"></div>
   <div id="color3"></div>
   <div id="color4"></div>
-  <div id="key"></div>
-  <script src="./assets/js/color.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
