--- a/requerimineto_3/pintar.html
+++ b/requerimineto_3/pintar.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pintar</title>
+    <link rel="stylesheet" href="./assets/css/req3.css">
 </head>
 <body>
-    <div id="ele1"> hello </div>
+    <main><div id="ele1">hello</div></main>
+    
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
