--- a/requerimineto_4/4_colores.html
+++ b/requerimineto_4/4_colores.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Colores</title>
+  <link rel="stylesheet" href="./assets/css/req4.css">
 </head>
 <body>
   <div id="color1"></div>
   <div id="color2"></div>
   <div id="color3"></div>
   <div id="color4"></div>
+  <div id="key"></div>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
